date:at Morning 2018-07-26  comment:multi-actions

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,8 +35,11 @@
         </activity>
 
         <activity
-            android:name=".activities.CheckLocationActivity"
+            android:name=".activities.LocationCheckActivity"
             android:theme="@style/Theme.Transparent">
+
+        </activity>
+        <activity android:name=".activities.LocationPickupActivity">
 
         </activity>
 
