date:at morning 2018-07-30  comment:  1-Home Page Post Cell with Type  2-Profile Post Cell with type  3-Localize Category , Subcategory , City , area ,Post  4-Post Filter (TagView Except Suggestion)
 Note: please note Add (Ads ,Business ,post)
 commit in mainActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -91,7 +91,10 @@
         <activity android:name=".activities.PostAddActivity">
 
         </activity>
-        <activity android:name=".activities.PostSearchActivity">
+        <activity
+            android:name=".activities.PostSearchActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateVisible|adjustPan">
 
         </activity>
         <activity android:name=".activities.PostDetailsActivity">
