--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,7 +92,7 @@ dependencies {
     kapt 'com.android.databinding:compiler:3.1.3'
     implementation 'com.android.support:multidex:1.0.3'
 
-//    implementation 'com.github.florent37:viewanimator:1.0.5'
+    implementation 'com.github.florent37:viewanimator:1.0.5'
 
     implementation project(':calligraphy')
     implementation project(':mainlibrary')
