--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -164,6 +164,12 @@
 
         </activity>
 
+        <activity
+            android:name=".activities.ProductAddActivity"
+            android:theme="@style/Theme.Transparent">
+
+        </activity>
+
     </application>
 
 </manifest>
