--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -170,6 +170,10 @@
 
         </activity>
 
+        <activity android:name=".activities.PostEditActivity">
+
+        </activity>
+
     </application>
 
 </manifest>
