--- a/photopicker/build.gradle
+++ b/photopicker/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
-android {
 
+android {
     compileSdkVersion COMPILE_VERSION
     buildToolsVersion BUILD_VERSION
 
@@ -13,9 +13,9 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
-    lintOptions {
-        abortOnError false
-    }
+//    lintOptions {
+//        abortOnError false
+//    }
 
     buildTypes {
         release {
@@ -27,7 +27,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+//    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:' + SUPPORT_VERSION
     implementation 'com.android.support:design:' + SUPPORT_VERSION
     implementation 'com.android.support:exifinterface:' + SUPPORT_VERSION
@@ -36,8 +36,8 @@ dependencies {
     implementation 'io.fotoapparat.fotoapparat:library:2.3.1'
     implementation 'com.github.bumptech.glide:glide:4.7.1'
 
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+//    testImplementation 'junit:junit:4.12'
+//    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
 
 }
