--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -166,6 +166,9 @@
 
         </activity>
 
+        <activity android:name=".activities.LocationViewerActivity">
+
+        </activity>
 
     </application>
 
