--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -170,6 +170,17 @@
 
         </activity>
 
+        <activity android:name=".activities.SettingsActivity">
+
+        </activity>
+
+        <activity
+            android:name=".activities.PictureActivity"
+            android:launchMode="singleInstance"
+            android:theme="@style/Theme.Transparent">
+
+        </activity>
+
     </application>
 
 </manifest>
