--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,12 @@ android {
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        manifestPlaceholders = [
+                onesignal_app_id: 'PUT YOUR ONESIGNAL APP ID HERE',
+                // Project number pulled from dashboard, local value is ignored.
+                onesignal_google_project_number: 'REMOTE'
+        ]
     }
 
     buildTypes {
@@ -100,8 +106,11 @@ dependencies {
     implementation project(':photopicker')
     implementation project(':locationpicker')
 
-//    implementation 'com.jsibbold:zoomage:1.2.0'
+    implementation 'com.onesignal:OneSignal:[3.9.1, 3.99.99]'
 }
+
+apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
+
 //kapt {
 //    generateStubs = true
 //}
