--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -181,6 +181,10 @@
 
         </activity>
 
+        <activity android:name=".activities.WebViewActivity">
+
+        </activity>
+
     </application>
 
 </manifest>
