--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         KOTLIN_VERSION = '1.2.21'
         COMPILE_VERSION = 27
         BUILD_VERSION = "27.0.3"
-        MIN_VERSION = 14
+        MIN_VERSION = 15
         SUPPORT_VERSION = "27.1.1"
         SUPPORT_SERVICE = '15.0.1'
         RX_VERSION = '2.0.1'//'2.1.16'//
@@ -42,11 +42,13 @@ buildscript {
         google()
         mavenCentral()
         maven { url "https://jitpack.io" }
+        maven { url 'https://plugins.gradle.org/m2/'}
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
+        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.11.0, 0.99.99]'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -55,10 +57,12 @@ buildscript {
 allprojects {
     repositories {
         maven { url 'https://maven.google.com' }
+
         jcenter()
         google()
         mavenCentral()
         maven { url "https://jitpack.io" }
+        maven { url 'https://plugins.gradle.org/m2/'}
     }
 }
 
