--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -185,6 +185,11 @@
 
         </activity>
 
+        <activity android:name=".activities.NotificationActivity">
+
+        </activity>
+
+
     </application>
 
 </manifest>
