--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,7 +104,7 @@ dependencies {
     implementation project(':mainlibrary')
     implementation project(':ninepatchlibrary')
     implementation project(':photopicker')
-    implementation project(':locationpicker')
+//    implementation project(':locationpicker')
 
     implementation 'com.onesignal:OneSignal:[3.9.1, 3.99.99]'
 }
