--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -132,25 +132,28 @@
 
         </activity>
 
+        <!--<activity-->
+            <!--android:name="com.schibstedspain.leku.LocationPickerActivity"-->
+            <!--android:label="@string/leku_title_activity_location_picker"-->
+            <!--android:parentActivityName=".activities.BusinessGuideAddActivity"-->
+            <!--android:theme="@style/Theme.AppCompat.Light.NoActionBar"-->
+            <!--android:windowSoftInputMode="adjustPan">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.SEARCH" />-->
+            <!--</intent-filter>-->
+
+            <!--<meta-data-->
+                <!--android:name="android.app.searchable"-->
+                <!--android:resource="@xml/leku_searchable" />-->
+            <!--<meta-data-->
+                <!--android:name="android.support.PARENT_ACTIVITY"-->
+                <!--android:value=".activities.BusinessGuideAddActivity" />-->
+        <!--</activity>-->
+
         <activity
-            android:name="com.schibstedspain.leku.LocationPickerActivity"
-            android:label="@string/leku_title_activity_location_picker"
-            android:parentActivityName=".activities.BusinessGuideAddActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            android:windowSoftInputMode="adjustPan">
-            <intent-filter>
-                <action android:name="android.intent.action.SEARCH" />
-            </intent-filter>
-
-            <meta-data
-                android:name="android.app.searchable"
-                android:resource="@xml/leku_searchable" />
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activities.BusinessGuideAddActivity" />
-        </activity>
-
-        <activity android:name=".activities.ProfileEditActivity">
+            android:name=".activities.ProfileEditActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateVisible|adjustPan">
 
         </activity>
 
