--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,8 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'kotlin-kapt'
 
+apply plugin: 'io.fabric'
+
 android {
     compileSdkVersion COMPILE_VERSION
     buildToolsVersion BUILD_VERSION
@@ -19,11 +21,11 @@ android {
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
-        manifestPlaceholders = [
-                onesignal_app_id               : '1eaeda82-b4bb-4354-adb2-192febfb3caa',
-                // Project number pulled from dashboard, local value is ignored.
-                onesignal_google_project_number: 'REMOTE'
-        ]
+//        manifestPlaceholders = [
+//                onesignal_app_id               : '1eaeda82-b4bb-4354-adb2-192febfb3caa',
+//                // Project number pulled from dashboard, local value is ignored.
+//                onesignal_google_project_number: 'REMOTE'
+//        ]
     }
     buildTypes {
         release {
@@ -57,6 +59,13 @@ dependencies {
     implementation "com.google.android.gms:play-services-gcm:$SUPPORT_SERVICE"
     implementation "com.google.android.gms:play-services-location:$SUPPORT_SERVICE"
     implementation "com.google.android.gms:play-services-places:$SUPPORT_SERVICE"
+
+    implementation "com.google.firebase:firebase-database:16.0.5"
+    implementation "com.google.firebase:firebase-core:16.0.6"
+    implementation "com.google.firebase:firebase-messaging:17.3.4"
+    implementation "com.firebase:firebase-jobdispatcher:0.7.0"
+
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.8'
 
     /*support service ended*/
 
@@ -102,11 +111,17 @@ dependencies {
     implementation project(':ninepatchlibrary')
     implementation project(':photopicker')
 
+
     //    implementation project(':locationpicker')
-    implementation 'com.onesignal:OneSignal:[3.9.1, 3.99.99]'
+//    implementation 'com.onesignal:OneSignal:[3.9.1, 3.99.99]'
+
+
 }
 
-apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
+
+apply plugin: "com.google.gms.google-services"
+
+//apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
 
 //kapt {
 //    generateStubs = true
