--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission-sdk-23 android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission-sdk-23 android:name="android.permission.WAKE_LOCK" />
+
+
     <uses-feature
         android:name="android.hardware.location.network"
         android:required="false" />
@@ -36,9 +40,18 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <!--<meta-data-->
-        <!--android:name="com.almersal.android.configrations.GlideConfiguration"-->
-        <!--android:value="GlideModule" />-->
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@mipmap/ic_launcher" />
+
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/colorAccent" />
+
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_channel_id"
+            android:value="@string/default_notification_channel_id" />
+
 
         <activity android:name=".activities.SplashActivity">
             <intent-filter>
@@ -133,21 +146,21 @@
         </activity>
 
         <!--<activity-->
-            <!--android:name="com.schibstedspain.leku.LocationPickerActivity"-->
-            <!--android:label="@string/leku_title_activity_location_picker"-->
-            <!--android:parentActivityName=".activities.BusinessGuideAddActivity"-->
-            <!--android:theme="@style/Theme.AppCompat.Light.NoActionBar"-->
-            <!--android:windowSoftInputMode="adjustPan">-->
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.SEARCH" />-->
-            <!--</intent-filter>-->
+        <!--android:name="com.schibstedspain.leku.LocationPickerActivity"-->
+        <!--android:label="@string/leku_title_activity_location_picker"-->
+        <!--android:parentActivityName=".activities.BusinessGuideAddActivity"-->
+        <!--android:theme="@style/Theme.AppCompat.Light.NoActionBar"-->
+        <!--android:windowSoftInputMode="adjustPan">-->
+        <!--<intent-filter>-->
+        <!--<action android:name="android.intent.action.SEARCH" />-->
+        <!--</intent-filter>-->
 
-            <!--<meta-data-->
-                <!--android:name="android.app.searchable"-->
-                <!--android:resource="@xml/leku_searchable" />-->
-            <!--<meta-data-->
-                <!--android:name="android.support.PARENT_ACTIVITY"-->
-                <!--android:value=".activities.BusinessGuideAddActivity" />-->
+        <!--<meta-data-->
+        <!--android:name="android.app.searchable"-->
+        <!--android:resource="@xml/leku_searchable" />-->
+        <!--<meta-data-->
+        <!--android:name="android.support.PARENT_ACTIVITY"-->
+        <!--android:value=".activities.BusinessGuideAddActivity" />-->
         <!--</activity>-->
 
         <activity
@@ -191,6 +204,18 @@
         <activity android:name=".activities.NotificationActivity">
 
         </activity>
+
+
+        <service android:name=".notifications.MyFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+
+        <service android:name=".notifications.MyJobService">
+
+        </service>
 
 
     </application>
