--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,11 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission-sdk-23 android:name="android.permission.WAKE_LOCK" />
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission-sdk-23 android:name="android.permission.CAMERA" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission-sdk-23 android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <uses-feature
         android:name="android.hardware.location.network"
@@ -62,6 +67,13 @@
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
+
+
+        <activity
+            android:name=".activities.PlayerActivity"
+            android:keepScreenOn="true"
+            android:screenOrientation="landscape"
+            android:theme="@style/AppTheme" />
 
         <activity
             android:name=".activities.MainActivity"
