--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,23 +15,38 @@ android {
         applicationId 'com.almersal.android' /*"com.brainsocket.globalpages"*/
         minSdkVersion MIN_VERSION
         targetSdkVersion COMPILE_VERSION
-        versionCode 5
-        versionName "1.1.2"
+        versionCode 7
+        versionName "1.1.3"
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
+        ndk.abiFilters 'armeabi-v7a','arm64-v8a','x86','x86_64'
 //        manifestPlaceholders = [
 //                onesignal_app_id               : '1eaeda82-b4bb-4354-adb2-192febfb3caa',
 //                // Project number pulled from dashboard, local value is ignored.
 //                onesignal_google_project_number: 'REMOTE'
 //        ]
     }
+    signingConfigs {
+        release {
+            storeFile file("Almersal keystore.jks")
+            storePassword 'GlobalPages'
+            keyAlias 'key0'
+            keyPassword 'GlobalPages'
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
+//        debug {
+//            debuggable true
+//            minifyEnabled true
+//            shrinkResources true
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//        }
     }
     lintOptions {
         abortOnError false
@@ -41,6 +56,8 @@ android {
     }
     productFlavors {
     }
+
+
 }
 
 dependencies {
