--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
         minSdkVersion MIN_VERSION
         targetSdkVersion COMPILE_VERSION
         versionCode 7
-        versionName "1.1.3"
+        versionName '1.2.5'
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
