--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        ndk.abiFilters 'armeabi-v7a','arm64-v8a','x86','x86_64'
+        ndk.abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
 //        manifestPlaceholders = [
 //                onesignal_app_id               : '1eaeda82-b4bb-4354-adb2-192febfb3caa',
 //                // Project number pulled from dashboard, local value is ignored.
@@ -56,7 +56,9 @@ android {
     }
     productFlavors {
     }
-
+    androidExtensions {
+        experimental = true
+    }
 
 }
 
@@ -137,6 +139,8 @@ dependencies {
     implementation project(':ninepatchlibrary')
     implementation project(':photopicker')
 
+    implementation 'de.hdodenhof:circleimageview:3.0.1'
+//    implementation 'com.google.android.material:material:1.1.0-alpha06'
     //    implementation project(':locationpicker')
 
     //    implementation 'com.onesignal:OneSignal:[3.9.1, 3.99.99]'
@@ -154,9 +158,10 @@ configurations.all {
     }
 }
 apply plugin: "com.google.gms.google-services"
-
+apply plugin: 'kotlin-android-extensions'
 //apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
 
 //kapt {
 //    generateStubs = true
 //}
+
