--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activities.EditJobActivity"></activity>
+        <activity android:name=".activities.ApplicantsActivity"></activity>
+        <activity android:name=".activities.EditJobActivity" />
         <activity android:name=".activities.AddNewJobActivity" />
         <activity android:name=".activities.JobDetailsActivity" />
         <activity android:name=".activities.JobsSearchActivity" />
@@ -87,27 +88,41 @@
             android:theme="@style/AppTheme" />
         <activity
             android:name=".activities.MainActivity"
-            android:label="@string/app_name" />
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.LocationCheckActivity"
             android:theme="@style/Theme.Transparent" />
-        <activity android:name=".activities.LocationPickupActivity" /> <!-- Registration Activities started -->
+        <activity
+            android:name=".activities.LocationPickupActivity"
+            android:screenOrientation="portrait" /> <!-- Registration Activities started -->
         <activity android:name=".activities.SignInActivity" />
         <activity
             android:name=".activities.SignUpActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
-        <activity android:name=".activities.ForgotPasswordActivity" />
-        <activity android:name=".activities.ProfileActivity" /> <!-- Registration Activities ended -->
+        <activity
+            android:name=".activities.ForgotPasswordActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.ProfileActivity"
+            android:screenOrientation="portrait" /> <!-- Registration Activities ended -->
         <!-- JobBusiness Activities Started -->
         <activity
             android:name=".activities.BusinessGuideAddActivity"
             android:launchMode="singleInstance"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateVisible|adjustPan" />
-        <activity android:name=".activities.BusinessGuideDetailsActivity" />
-        <activity android:name=".activities.BusinessGuideSearchActivity" /> <!-- JobBusiness Activities Started -->
+        <activity
+            android:name=".activities.BusinessGuideDetailsActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.BusinessGuideSearchActivity"
+            android:screenOrientation="portrait" /> <!-- JobBusiness Activities Started -->
         <!-- Post Activities started -->
-        <activity android:name=".activities.PostAddActivity" />
+        <activity
+            android:name=".activities.PostAddActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.PostSearchActivity"
             android:screenOrientation="portrait"
@@ -116,10 +131,12 @@
         <activity android:name=".activities.TestActivity" />
         <activity
             android:name=".activities.FindNearByActivity"
-            android:launchMode="singleInstance" />
+            android:launchMode="singleInstance"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.PharmacyDutySearchActivity"
-            android:launchMode="singleInstance" /> <!-- <activity -->
+            android:launchMode="singleInstance"
+            android:screenOrientation="portrait" /> <!-- <activity -->
         <!-- android:name="com.schibstedspain.leku.LocationPickerActivity" -->
         <!-- android:label="@string/leku_title_activity_location_picker" -->
         <!-- android:parentActivityName=".activities.BusinessGuideAddActivity" -->
@@ -141,23 +158,36 @@
             android:windowSoftInputMode="stateVisible|adjustPan" />
         <activity
             android:name=".activities.ProductDetailsActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.Transparent" />
         <activity
             android:name=".activities.ProductAddActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.Transparent" />
-        <activity android:name=".activities.LocationViewerActivity" />
-        <activity android:name=".activities.SettingsActivity" />
+        <activity
+            android:name=".activities.LocationViewerActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.SettingsActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.PictureActivity"
             android:launchMode="singleInstance"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.Transparent" />
         <activity
             android:name=".activities.PicturesListActivity"
             android:launchMode="singleInstance"
             android:theme="@style/Theme.Transparent" />
-        <activity android:name=".activities.WebViewActivity" />
-        <activity android:name=".activities.NotificationActivity" />
-        <activity android:name=".activities.VolumesActivity" />
+        <activity
+            android:name=".activities.WebViewActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.NotificationActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.VolumesActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.VideoDetailsActivity"
             android:configChanges="orientation"
