fixes including, show applicant number, ui improvements, horizontal jobs list in profile, fix crash in references adapter, fix edit location ....

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -95,6 +95,7 @@
             android:theme="@style/Theme.Transparent" />
         <activity
             android:name=".activities.LocationPickupActivity"
+            android:launchMode="singleInstance"
             android:screenOrientation="portrait" /> <!-- Registration Activities started -->
         <activity android:name=".activities.SignInActivity" />
         <activity
