Push For Moulham

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ git add README.md
 git commit -m "first commit"
 git remote add origin https://github.com/molhamstein/GlobalPagesAndroid.git
 git push -u origin master
+/app/release/
